--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
           <h3 class="mt-2 text-base font-medium text-gray-800 text-center group-hover:underline">360° Tre glas</h3>
         </a>
-        <a href="360/vinglas01/vinglas01.html" target="_blank" class="block group">
+        <a href="360/vinglas01/Vinglas01.html" target="_blank" class="block group">
           <div class="aspect-w-16 aspect-h-9 bg-gray-200 rounded-xl overflow-hidden shadow">
             <img src="img/vinglas01.webp" alt="Demo 1" class="object-cover w-full h-full group-hover:scale-105 transition-transform duration-300" />
           </div>
