--- a/3d/model2/model2.html
+++ b/3d/model2/model2.html
@@ -71,7 +71,7 @@
   </div>
 
   <div class="back-link">
-    <a href="index.html">← Tillbaka till startsidan</a>
+    <a href="../../index.html">← Tillbaka till startsidan</a>
   </div>
 
 </body>
